# rustpixiv

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
src/: client.rs  lib.rs  utils.rs
