[package]
name = "pixiv"
version = "0.1.3"
description = "Unofficial rust library for the Pixiv API."
keywords = ["pixiv", "pixiv-api"]
repository = "https://github.com/fairingrey/rustpixiv"
authors = ["Allen Bui <allenbui94@gmail.com>"]
license = "MIT"

[dependencies]
reqwest = "0.8.5"
serde = "1.*"
serde_json = "1.0.11"
chrono = "0.4.*"
log = "0.3.*"

[dev-dependencies]
kankyo = "~0.2"