[package]
name = "pixiv"
version = "0.2.0"
description = "Unofficial rust library for the Pixiv API."
keywords = ["pixiv", "pixiv-api"]
repository = "https://github.com/fairingrey/rustpixiv"
authors = ["Allen Bui <allenbui94@gmail.com>"]
license = "MIT"

[dependencies]
reqwest = { version = "0.9", optional = true }
bytes = "0.4"
http = "0.1"
serde = "1"
serde_json = "1.0.11"
serde_urlencoded = "0.5"
chrono = "0.4"
log = "0.3"

[dev-dependencies]
kankyo = "~0.2"

[features]
default = ["reqwest-client"]
reqwest-client = ["reqwest"]
